--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,5 +6,16 @@
 </head>
 <body>
     <h1>Recipes</h1>
+
+<table>
+    <tr>
+        <th>ID</th>
+        <th>DESCRIPTION</th>
+    </tr>
+    <tr th:each="recipe : ${recipes}">
+        <td th:text="${recipe.id}">23</td>
+        <td th:text="${recipe.description}">Tasty</td>
+    </tr>
+</table>
 </body>
 </html>
