--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -33,9 +33,10 @@
                             </div>
                             <div class="col-md-9">
                                 <ul>
-                                    <li>cat one</li>
-                                    <li>cat two</li>
-                                    <li>cat three</li>
+                                    <li th:remove="all">cat one</li>
+                                    <li th:remove="all">cat two</li>
+                                    <!--/@thymesVar id="recipe" type="com.springframework.spring5recipeapp.domain.Recipe"*/-->
+                                    <li th:each="recipe : ${recipe.categories}" th:text="${categories.getDescription()}">cat three</li>
                                 </ul>
                             </div>
                         </div>
@@ -44,13 +45,13 @@
                                 <h7>Prep Time:</h7>
                             </div>
                             <div class="col-md-3">
-                                <p>30 min</p>
+                                <p th:text="${(recipe.prepTime) + ' min'}">30 min</p>
                             </div>
                             <div class="col-md-3">
                                 <h7>Difficulty:</h7>
                             </div>
                             <div class="col-md-3">
-                                <p>Easy</p>
+                                <p th:text="${recipe.difficulty}">Easy</p>
                             </div>
                         </div>
                         <div class="row justify-content-center">
@@ -58,13 +59,13 @@
                                 <h7>Cooktime:</h7>
                             </div>
                             <div class="col-md-3">
-                                <p>30 min</p>
+                                <p th:text="${(recipe.cookTime) + ' min'}">30 min</p>
                             </div>
                             <div class="col-md-3">
                                 <h7>Servings:</h7>
                             </div>
                             <div class="col-md-3">
-                                <p>4</p>
+                                <p th:text="${recipe.servings}">4</p>
                             </div>
                         </div>
                         <div class="row justify-content-center">
@@ -72,13 +73,13 @@
                                 <h7>Source:</h7>
                             </div>
                             <div class="col-md-3">
-                                <p>30 min</p>
+                                <p th:text="${recipe.source}">30 min</p>
                             </div>
                             <div class="col-md-3">
                                 <h7>URL:</h7>
                             </div>
                             <div class="col-md-3">
-                                <p>http://www.example.com</p>
+                                <p th:text="${recipe.url}">http://www.example.com</p>
                             </div>
                         </div>
                     </div>
@@ -91,9 +92,12 @@
                         <div class="row justify-content-center">
                             <div class="col-md-12">
                                 <ul>
-                                    <li>1 Cup of milk</li>
-                                    <li>1 Teaspoon of chocolate</li>
-                                    <li>1 Teaspoon of Sugar</li>
+                                    <li th:remove="all">1 Cup of milk</li>
+                                    <li th:remove="all">1 Teaspoon of chocolate</li>
+                                    <li th:each="ingredient : ${recipe.ingredients}"
+                                        th:text="${(ingredient.getAmount() +
+                                        ' ' + ingredient.uom.getDescription() +
+                                        ' - ' + ingredient.getDescription())}">1 Teaspoon of Sugar</li>
                                 </ul>
                             </div>
                         </div>
