--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -20,7 +20,7 @@
 <!--/@thymesVar id="recipe" type="com.springframework.spring5recipeapp.domain.Recipe"*/-->
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row justify-content-center">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-8 col-md-offset-3">
             <div class="panel-group">
                 <div class="card card-primary border border-primary" style="margin: 20px 0">
                     <div class="card-header bg-primary text-light">
@@ -87,8 +87,16 @@
                 </div>
                 <div class="card card-primary border border-primary" style="margin: 20px 0;">
                     <div class="card-header bg-primary text-light">
-                        <h7 class="card-title" >Ingredients</h7>
+                        <div class="row">
+                            <div class="col-md-10 ">
+                                <h7 class="card-title">Ingredients</h7>
+                            </div>
+                            <div class="col-md-1">
+                                <a class="btn btn-light" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients'}" role="button">View</a>
+                            </div>
+                        </div>
                     </div>
+
                     <div class="card-body">
                         <div class="row justify-content-center">
                             <div class="col-md-12">
