--- a/src/main/resources/templates/recipe/ingredient/list.html
+++ b/src/main/resources/templates/recipe/ingredient/list.html
@@ -23,9 +23,19 @@
         <div class="col-md-8 col-md-offset-3">
             <div class="panel-group">
                 <div class="card card-primary border border-primary" style="margin: 20px 0">
-                    <div class="card-header bg-primary text-light">
-                        <h1 class="card-title">Ingredients</h1>
+
+
+                <div class="card-header bg-primary text-light mb-3">
+                    <div class="row">
+                        <div class="col-md-10 ">
+                            <h2 class="card-title">Ingredients</h2>
+                        </div>
+                        <div class="col-md-2">
+                            <a class="btn btn-light" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/new'}" role="button">Add New</a>
+                        </div>
                     </div>
+                </div>
+
                     <div class="card-body">
 
                         <div class="table-responsive" th:if="${not #lists.isEmpty(recipe.ingredients)}">
