--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -24,23 +24,35 @@
             <div class="panel-group">
                 <div class="card card-primary border border-primary" style="margin: 20px 0">
                     <div class="card-header bg-primary text-light">
-
-                        <h7 class="card-title" th:text="${recipe.description}">Recipe Description Here!</h7>
+                        <div class="row">
+                            <div class="col-md-9 ">
+                                <h7 class="card-title" th:text="${recipe.description}">Recipe Description Here!</h7>
+                            </div>
+                            <div class="col-md-3">
+                                <a class="btn btn-light" href="#"
+                                   th:href="@{'/recipe/' + ${recipe.id} + '/image'}" role="button">Change Image</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="card-body">
-                        <div class="row justify-content-center">
+                        <div class="row">
                             <div class="col-md-3">
                                 <h7>Categories:</h7>
                             </div>
-                            <div class="col-md-9">
-
+                            <div class="col-md-4">
                                 <ul>
                                     <li th:remove="all">cat one</li>
                                     <li th:remove="all">cat two</li>
                                     <li th:each="category : ${recipe.categories}" th:text="${category.getDescription()}">cat three</li>
                                 </ul>
                             </div>
+                            <div class="col-md-3">
+                                <img src="../../static/images/guacamole400x400WithX.jpg"
+                                     th:src="@{/images/guacamole400x400WithX.jpg}" with="200" height="200">
+                            </div>
                         </div>
+                        <p></p>
+                        <p></p>
                         <div class="row justify-content-center">
                             <div class="col-md-3">
                                 <h7>Prep Time:</h7>
@@ -110,6 +122,7 @@
                                     + ' of ' + ingredient.getDescription()}">1 Teaspoon of Sugar</li>
                                 </ul>
                             </div>
+
                         </div>
                     </div>
                 </div>
