updated recipe show html

--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -46,9 +46,14 @@
                                     <li th:each="category : ${recipe.categories}" th:text="${category.getDescription()}">cat three</li>
                                 </ul>
                             </div>
-                            <div class="col-md-3">
+<!--                            <div class="col-md-4">-->
+<!--                                <img src="../resources/static/images/guacamole400x400WithX.jpg"-->
+<!--                                     th:src="@{/resources/static/images/guacamole400x400WithX.jpg}" width="200" height="200">-->
+<!--                            </div>-->
+                            <div class="col-md-4">
                                 <img src="../../static/images/guacamole400x400WithX.jpg"
-                                     th:src="@{/images/guacamole400x400WithX.jpg}" with="200" height="200">
+                                     th:src="@{'/recipe/' + ${recipe.id} + '/recipeimage'}"
+                                     width="200" height="200">
                             </div>
                         </div>
                         <p></p>
