--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -89,6 +89,9 @@
                                     <label><b>URL:</b></label>
                                     <input type="text" class="form-control" th:field="*{url}"/>
                                 </div>
+                                <div class="col-md-3 form-group">
+                                    <input type="hidden" th:field="*{image}"/>
+                                </div>
                             </div>
                         </div>
                     </div>
